[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/GemSwitcher.gd" type="Script" id=1]
[ext_resource path="res://Assets/image/application/cancel.png" type="Texture" id=2]
[ext_resource path="res://Assets/image/application/confirm.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/font/fzmw.ttf"

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = SubResource( 2 )

[node name="GemSwitcher" type="Panel" groups=[
"gem_switcher",
]]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 152.0
margin_right = 1600.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 3 )
text = "请返还 0 颗宝石!"
align = 1

[node name="GemContainer" type="HBoxContainer" parent="."]
margin_top = 320.0
margin_right = 1336.0
margin_bottom = 600.0
custom_constants/separation = 200
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="."]
margin_left = 232.0
margin_top = 776.0
margin_right = 481.998
margin_bottom = 1026.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="TextureButton" parent="."]
margin_left = 1128.0
margin_top = 776.0
margin_right = 1378.0
margin_bottom = 1026.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemButtonContainer" type="HBoxContainer" parent="."]
margin_top = 672.0
margin_right = 1600.0
margin_bottom = 824.0
custom_constants/separation = 200
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
